--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask==2.2.2
-joblib==1.2.0
-scikit-learn==1.2.2
-numpy==1.23.5
-gunicorn==20.1.0
-flask-cors==4.0.0
+flask==3.0.0
+werkzeug==3.0.3
+gunicorn==22.0.0
+numpy==1.26.4
+scikit-learn==1.5.1
